# luperiq-platform

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLIC-SCOPE.md  README.md
crates/luperiq-forge-api/: Cargo.toml
crates/luperiq-forge-api/src/: content.rs  durability.rs  error.rs  events.rs  journal.rs  lib.rs  nexus.rs  platform.rs  slug.rs  terminology.rs
crates/luperiq-mod-blog/: Cargo.toml  luperiq-mod-blog
crates/luperiq-mod-blog/src/: lib.rs
crates/luperiq-mod-blog/src/blog/: mod.rs
crates/luperiq-mod-company-profile/: Cargo.toml
crates/luperiq-mod-company-profile/src/: lib.rs
crates/luperiq-mod-company-profile/src/company_profile/: admin_js.rs  conversation.rs  extractors.rs  import.rs  mod.rs  profile.rs  questionnaire.rs
crates/luperiq-mod-content-pipeline/: Cargo.toml
crates/luperiq-mod-content-pipeline/src/: lib.rs
crates/luperiq-mod-content-pipeline/src/content_pipeline/: admin_js.rs  ai_client.rs  batch.rs  context.rs  generator.rs  jobs.rs  mod.rs  models.rs  seo_data.rs  templates.rs
crates/luperiq-mod-content-sources/: Cargo.toml
crates/luperiq-mod-content-sources/src/: lib.rs
crates/luperiq-mod-content-sources/src/content_sources/: admin_css.rs  admin_js.rs  conflict.rs  mod.rs  pricing.rs  query.rs  types.rs  upload.rs
crates/luperiq-mod-dashboard-themes/: Cargo.toml
crates/luperiq-mod-dashboard-themes/src/: lib.rs
crates/luperiq-mod-dashboard-themes/src/dashboard_themes/: admin_js.rs  mod.rs
crates/luperiq-mod-directory/: Cargo.toml  luperiq-mod-directory
crates/luperiq-mod-directory/src/: claim.rs  host_gate.rs  lib.rs  pages_io.rs  store.rs  viewer.rs
crates/luperiq-mod-forms/: Cargo.toml  luperiq-mod-forms
crates/luperiq-mod-forms/src/: forms.rs  lib.rs
crates/luperiq-mod-industry-profile/: Cargo.toml
crates/luperiq-mod-industry-profile/src/: lib.rs
crates/luperiq-mod-industry-profile/src/industry_profile/: admin_js.rs  mod.rs  profile.rs  seed.rs  seo_import.rs
crates/luperiq-mod-iqtags-core/: Cargo.toml
crates/luperiq-mod-iqtags-core/src/: lib.rs
crates/luperiq-mod-location-profile/: Cargo.toml
crates/luperiq-mod-location-profile/src/: lib.rs
crates/luperiq-mod-location-profile/src/location_profile/: admin_js.rs  census.rs  competitors.rs  mod.rs  profile.rs
crates/luperiq-mod-page-generator/: Cargo.toml  luperiq-mod-page-generator
crates/luperiq-mod-page-generator/src/: lib.rs
crates/luperiq-mod-page-generator/src/page_generator/: admin_js.rs  industry.rs  mod.rs  templates.rs
crates/luperiq-mod-reporting/: Cargo.toml
crates/luperiq-mod-reporting/src/: lib.rs  reports.rs  source.rs  types.rs
crates/luperiq-mod-reporting/tests/: affiliate.rs  compose_pipeline.rs  integration.rs
crates/luperiq-mod-sales-funnel/: Cargo.toml
crates/luperiq-mod-sales-funnel/src/: lib.rs
crates/luperiq-mod-sales-funnel/src/sales_funnel/: banner.rs  directory_enrich.rs  enrich.rs  leads.rs  mod.rs  promo.rs  trials.rs
crates/luperiq-mod-seo/: Cargo.toml  luperiq-mod-seo
crates/luperiq-mod-seo/src/: lib.rs
crates/luperiq-mod-seo/src/seo/: ab_seo.rs  admin_js.rs  content_queue.rs  crawl_summary.rs  crawl_tracker.rs  handlers.rs  intelligence.rs  keyword_gate.rs  link_checker.rs  mod.rs  photo_library.rs  photo_library_js.rs  scoring.rs  structured_data.rs  surfer.rs  surfer_admin_js.rs  surfer_handlers.rs  surfer_map.rs  surfer_scoring.rs  timeline_js.rs  tracker.rs  verified.rs  verified_admin_js.rs  verified_handlers.rs
crates/luperiq-mod-seo/src/seo/google/: admin_js.rs  ads.rs  cache.rs  ga4.rs  gsc.rs  insights.rs  mod.rs  oauth.rs
crates/luperiq-mod-site-catalog/: Cargo.toml
crates/luperiq-mod-site-catalog/src/: lib.rs
crates/luperiq-mod-site-catalog/src/site_catalog/: blueprint.rs  defaults.rs  mod.rs  presets.rs  provision.rs  store.rs  taxonomy.rs  types.rs
crates/luperiq-mod-theme-studio/: Cargo.toml  luperiq-mod-theme-studio
crates/luperiq-mod-theme-studio/src/: lib.rs
crates/luperiq-mod-theme-studio/src/theme_studio/: admin_builder.rs  admin_footer.rs  admin_header.rs  admin_history.rs  admin_pages.rs  admin_presets.rs  admin_shared.rs  admin_sidebar.rs  admin_studio.rs  admin_tokens.rs  behaviors.js  behaviors.rs  block_registry.rs  config.rs  css.rs  import.rs  layout_themes.rs  mod.rs  nav.rs  page_customizations.rs  playground.rs  revisions.rs  schedules.rs  scope_style.rs  smart_block_defaults.rs  template_engine.rs
crates/luperiq-module-api/: Cargo.toml
crates/luperiq-module-api/src/: context.rs  industry.rs  lib.rs  module_trait.rs  providers.rs  registry.rs  session.rs
examples/basic-site/: Cargo.toml
examples/basic-site/src/: main.rs
