[workspace]
resolver = "2"
members = [
    "crates/luperiq-forge-api",
    "crates/luperiq-module-api",
    "crates/luperiq-mod-blog",
    "crates/luperiq-mod-page-generator",
    "crates/luperiq-mod-seo",
    "crates/luperiq-mod-forms",
    "crates/luperiq-mod-directory",
    "crates/luperiq-mod-content-pipeline",
    "crates/luperiq-mod-content-sources",
    "crates/luperiq-mod-site-catalog",
    "crates/luperiq-mod-reporting",
    "crates/luperiq-mod-iqtags-core",
    "crates/luperiq-mod-location-profile",
    "crates/luperiq-mod-company-profile",
    "crates/luperiq-mod-industry-profile",
    "crates/luperiq-mod-sales-funnel",
    "crates/luperiq-mod-theme-studio",
    "crates/luperiq-mod-dashboard-themes",
    "examples/basic-site",
]

[workspace.package]
edition = "2021"
version = "0.5.1"
license = "Apache-2.0"
repository = "https://github.com/TheAppForThat/luperiq-platform"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ulid = { version = "1.0", features = ["serde"] }
tokio = { version = "1.43", features = ["full"] }
axum = "0.8"
async-trait = "0.1"
blake3 = "1.5"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
