[package]
name = "luperiq-forge-api"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
description = "Public type definitions and traits for the LuperIQ module system"
repository = "https://github.com/TheAppForThat/luperiq-platform"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ulid = { version = "1.0", features = ["serde"] }
