[package]
name = "luperiq-mod-content-sources"
version = "0.1.0"
edition = "2021"
description = "Content Sources module — manage content sources for AI page generation"

[dependencies]
luperiq-module-api = { path = "../luperiq-module-api" }
luperiq-forge-api = { path = "../luperiq-forge-api" }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
