[package]
name = "luperiq-mod-dashboard-themes"
version = "0.1.0"
edition = "2021"
description = "Dashboard Themes module — admin panel appearance, color presets, and customization"

[dependencies]
luperiq-module-api = { path = "../luperiq-module-api" }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
