[package]
name = "luperiq-mod-forms"
version = "0.1.0"
edition = "2021"
description = "Forms module — form builder, submissions, honeypot protection, and email notifications"

[dependencies]
luperiq-module-api = { path = "../luperiq-module-api" }
luperiq-forge-api = { path = "../luperiq-forge-api" }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ulid = "1"
