[package]
name = "luperiq-mod-location-profile"
version = "0.1.0"
edition = "2021"
description = "Location Profile module — data sheets per service area with demographics, competitors, and local keywords"

[dependencies]
luperiq-module-api = { path = "../luperiq-module-api" }
luperiq-forge-api = { path = "../luperiq-forge-api" }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
ulid = "1"

[dev-dependencies]
tempfile = "3"
