[package]
name = "luperiq-mod-sales-funnel"
version = "0.1.0"
edition = "2021"
description = "Sales funnel module — industry CTA modal, demo site banner, trial flow, lead tracking"

[dependencies]
luperiq-module-api = { path = "../luperiq-module-api" }
luperiq-forge-api = { path = "../luperiq-forge-api" }
# luperiq-mod-smtp = { path = "../luperiq-mod-smtp" }  # private crate — available on hosted platform
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ulid = { workspace = true }
tokio = { workspace = true }
rand = "0.9"
chrono = "0.4"
reqwest = { workspace = true }
regex = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
