[package]
name = "luperiq-mod-theme-studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Theme Studio module — CSS generation, block rendering, nav styles, config, design system"

[dependencies]
luperiq-forge-api = { path = "../luperiq-forge-api" }
luperiq-module-api = { path = "../luperiq-module-api" }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"

[dev-dependencies]
tempfile = "3"
