[package]
name = "luperiq-module-api"
version = "0.1.0"
edition = "2021"
description = "Shared module types for the LuperIQ CMS platform"

[dependencies]
luperiq-forge-api = { path = "../luperiq-forge-api" }
axum = { workspace = true, features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
tokio = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie"] }
